<resources>
    <string name="app_name">F3D</string>
    <string name="options_panel">Options panel</string>
    <string name="console">Console</string>
    <string name="console_clear">Clear console</string>
    <string name="console_close">Close console</string>
    <string name="console_command_hint">Type a command</string>
    <string name="console_send">Run command</string>
    <string name="console_empty">No log output yet.</string>
    <string name="console_empty_filtered">No messages match the active filters.</string>
    <string name="console_level_error">Error</string>
    <string name="console_level_warning">Warning</string>
    <string name="console_level_info">Info</string>
    <string name="console_level_debug">Debug</string>
    <string name="animation_play">Play animation</string>
    <string name="animation_pause">Pause animation</string>
    <string name="animation_previous">Previous animation</string>
    <string name="animation_next">Next animation</string>
    <string name="animation_speed">Playback speed</string>
    <string name="animation_autohide">Auto-hide controls</string>
    <string name="animation_locked">Keep controls visible</string>
    <string name="scene">Scene</string>
    <string name="scene_panel">Scene panel</string>
    <string name="scene_empty">No file loaded.</string>
    <string name="scene_expand">Expand or collapse</string>
    <string name="scene_toggle_visibility">Toggle visibility</string>
    <plurals name="scene_info_actors">
        <item quantity="one">%s actor</item>
        <item quantity="other">%s actors</item>
    </plurals>
    <plurals name="scene_info_points">
        <item quantity="one">%s point</item>
        <item quantity="other">%s points</item>
    </plurals>
    <plurals name="scene_info_cells">
        <item quantity="one">%s cell</item>
        <item quantity="other">%s cells</item>
    </plurals>
    <string name="options_unavailable">Options unavailable</string>
    <string name="options">Options</string>
    <string name="reset">Reset</string>
    <string name="support">Support</string>
    <string name="support_f3d">Support F3D</string>
    <string name="support_f3d_description">F3D is free and open-source.\nIf you enjoy using it, please consider supporting its development.</string>
    <string name="donate">Donate</string>
    <string name="maybe_later">Maybe later</string>
    <string name="donate_url" translatable="false">https://donate.stripe.com/4gM00j7tO1w4eAD5J0cs800</string>
</resources>
